Fix some issues on mobile layout with spacing/sizing.

--- a/components/NowPlaying/controls/styles/Controls.module.css
+++ b/components/NowPlaying/controls/styles/Controls.module.css
@@ -2,13 +2,13 @@
     color: rgb(var(--subheader-forground-rgb));
 
     font-size: 3rem;
-    width: 2rem;
-    height: 2rem;
+    width: 1.75rem;
+    height: 1.75rem;
 }
 
 .play {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2rem;
+    height: 2rem;
 }
 
 .stop {
@@ -17,6 +17,18 @@
 }
 
 .range {
-    margin: .75rem 1rem;
+    margin: .75rem 0;
     flex-grow: 1;
+}
+
+@media (min-width: 768px /*var(--mobile-break)*/) {
+    .control {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .play {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
 }
