--- a/components/NowPlaying/styles/AudioPlayer.module.css
+++ b/components/NowPlaying/styles/AudioPlayer.module.css
@@ -10,6 +10,12 @@
     flex-grow: 1;
     align-items: center;
     justify-content: center;
-    gap: 1.25rem;
+    gap: .75rem;
     margin-bottom: 1rem;
+}
+
+@media (min-width: 768px /*var(--mobile-break)*/) {
+    .controls {
+        gap: 1.25rem;
+    }
 }
