--- a/components/NowPlaying/styles/NowPlaying.module.css
+++ b/components/NowPlaying/styles/NowPlaying.module.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    flex-grow: 0;
     align-items: center;
     justify-content: space-evenly;
     gap: 1rem;
@@ -40,6 +39,8 @@
 .track_info {
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
 
     height: 100%;
     max-width: 120px;
